# Framework

./: CMakeLists.txt  LICENSE  README.md
Source/: Tests.cpp
Source/Framework/Assembly/: Assembly.cpp  Assembly.hpp
Source/Framework/Hooking/: Hooking.cpp  Hooking.hpp
Source/Framework/Memory/: Memory.cpp  Memory.hpp
Source/Framework/PatternScan/: PatternScan.cpp  PatternScan.hpp
Source/Framework/ReturnAddr/: ReturnAddr.hpp
Source/Tests/: Main.cpp
Source/framework/: Assembly.h  Assembly.hpp  Framework.h  Hooking.h  Hooking.hpp  Memory.h  Memory.hpp  PatternScan.h  PatternScan.hpp  ReturnAddr.h  ReturnAddr.hpp
Source/framework/assembly/: Assembly.h
Source/framework/hooking/: Hooking.h
Source/framework/memory/: Memory.h
Source/framework/patternscan/: PatternScan.h
Source/framework/returnaddr/: ReturnAddr.h
Source/tests/: Main.cpp
